# RetOS

./: .gitignore  Cargo.toml  README.md  build.rs  roman_references.txt  rust-toolchain.toml  x86_64-retos.json
kernel/: Cargo.toml
kernel/src/: allocator.rs  clock.rs  lib.rs  logger.rs  main.rs
kernel/src/cli/: commands.rs
kernel/src/interrupts/: gdt.rs  idt.rs  interrupt.rs  mod.rs  pics.rs
kernel/src/memory/: bootloader.rs  mod.rs  pagination.rs  tables.rs
kernel/src/print/: buffer.rs  macros.rs  mod.rs
kernel/src/printer/: buffer.rs  color.rs  macros.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  task.rs
kernel/src/terminal/: cli.rs  commands.rs  error.rs  macros.rs  mod.rs  terminal.rs  verbosity.rs
kernel/src/terminal/commands/: clear.rs  echo.rs  keyboard.rs  mod.rs  ps.rs  shutdown.rs  uptime.rs
kernel/src/vga/: buffer.rs  macros.rs  mod.rs
