[package]
name = "retos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.10"
x86_64 = "0.15.2"

spin = { version = "0.9.8", features = ["lazy"] }

noto-sans-mono-bitmap = { version = "0.3.1", default-features = false, features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials"]}

pc-keyboard = "0.8.0"
pic8259 = "0.11.0"