[package]
name = "retos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# CPU
bootloader_api = "0.11.10"
x86_64 = "0.15.2"

# Alloc
spin = { version = "0.9.8", features = ["lazy"] }
talc = "4.4.2"

# Async
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc", "nightly"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }

# Hardware
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"

# Cli
embedded-cli = "0.2.1"

# Errors
thiserror = { version = "2.0.11", default-features = false }

# Font
noto-sans-mono-bitmap = { version = "0.3.1", default-features = false, features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials", "unicode-latin-1-supplement", "unicode-latin-extended-a"]}