[package]
name = "retos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# CPU
bootloader_api = "0.11.10"
x86_64 = "0.15.2"

# Alloc
spin = { version = "0.9.8", features = ["lazy"] }
talc = "4.4.2"

# Async
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc", "nightly"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"]}
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }

# Hardware
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"

# Cli
embedded-cli = "0.2.1"

# Errors
thiserror = { version = "2.0.11", default-features = false }

# Log
goolog = { version = "0.10.1", git = "https://github.com/Julien-cpsn/goolog" }

# Utils
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
paste = "1.0.15"
noto-sans-mono-bitmap = { version = "0.3.1", default-features = false, features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials", "unicode-latin-1-supplement", "unicode-latin-extended-a"]}